CAMBIOS DEL DIA 29-03

--- a/Pizzeria/Caja.resx
+++ b/Pizzeria/Caja.resx
@@ -117,4 +117,134 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="BtnExcel.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAARCMAAEQjARIjYisAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAAIxUlEQVR4Xu3deahVVRTHcech00IzMksrQzQafBmpqEFoQkUlhIj4R5n+
+        ESKG4UT/hFSkZgNiQqlphYnBQ7G0kDQhh4pKScqyWbPJ5rKJ6vVdcYXjvuvcu89wr++evf74/HPuWvuc
+        u8/P553OPm1aWlpMRPu2HdpjMCZjCbZht1ZbBOrGUHBiO2MopmE59uAYWhzvaf1FoG4sIk5id4zCTKzG
+        PvwF92RrLACNhBPWG+MwD+txEP9CO7k+LACtFSenH8ZjATbhMLSTmIUF4GTjJLTDIEzCYryE76CdsLxZ
+        AOqJCe+EJkzFMuzCr9BOTj1YAGqFyT0VIzEDq7AXvi/O6sUCkAcmshfGYi7WycTiH2iT3ppYAJJi0s7F
+        jbgbG3EI2uQ2AgtAHCanLQZiIhZhK45Cm8hGZQEQTERHDMEULMVO/AJt0ookvADwpLthBKZjJd7En9Am
+        qOiKHQCeYE+MwWysxQE0wouzeiluAHhynzpP1pQrCwDb5O3r8AYzDGdFn4c8Ee0JmxNpAZAJ1WobwX40
+        WQD8FS0AQj5ZHWAB8FPEAIhmC4CfogbgiAXAT1ED8P8TUR8wJ7AABM4CEDgLQOAsAIGzAATOAhA4C0Dg
+        LACBswAETgvA2Zif0lNw97EDC3Pkdc2EBcBPWQCyYDy5ksndx3ytNi3Gk19cu/soYwHwYwEInAUgcBaA
+        wFkAAmcBCJwFIHAWgMBZAGLcB1m1I4lL8QO08ZL4GBfgvAS2QBurmrIAsE2uftY+gfPRDHcfcundmhz9
+        BHcfZbIG4Guc5k5ONfTcExkjrcna2HGoH+30J6EFwL4LKHnQnZxq6DkD2np8vmSJt7ba2BpqO+DtUm8a
+        FoAKZDmXQe4EVUPPw5ExkrpWGzMO9bOc/qQsAFW84E5QNfT0RZrLzV/WxotDfR/8HOlPwwLg4QZ3kqqh
+        Z4Uzho9h2lhxqH/G6U/DAuDhA3RyJ6oS6i/E36V+H83aOHGov9rpT8sC4GmeO1HV0COrhWljuSQo3q81
+        qJXlbN4t9WZlAfAk6wX1cSerEurlcwGfdXxXaP1xqJ/j9GdhAUjgSXeyqqHnOWcM12/oq/VqqD0Hea4s
+        agFIQP41D3cnrBLqZTEqbazjFmp9cah/1unPSgtAliViHoW7D9mm1abltfRPLQIgXof3BzWC+u2R/qjv
+        cbrWo6H2mkhvXsoCkAXjyQ9D3X0U7sugKdqBxaFelpDVxpmr1WuolUWm34/05sUCkMJX6KEdXBzq5S9H
+        dIzP0VWr1VB7V6Q3TxaAlB7QDi4O9e7XpNO0Og21/ZHl+4VKLAApyfcEA7UD1FAr6w5/VuqV//u9P1ii
+        dkOprxYsABls0Q4wDvX3l/oe0x7XUHtdqadWLAAZXa8dpIbai0s9o7XHXdR1wYelnlqxAGQkd+1K8udc
+        bv7k9TaSOrkfgbbPPFkAcjBHO1ANtT217S7q5Cdhv5fGryULQA7kO/kTFirOivGej4xfS2UBYNsV+DEl
+        LbSyTatNy2u193oGQKx2JzItxpLb0Wj7qAUtAPJxq1bbUOodAPme4Ep3MpNijK74pDRmPVgAcvQqEn1P
+        4KI/j18VJ2EByNkt7oT6olde+P0RGaseDijHYQHIYLY7ob7o7YEvI2PVg/0FyNFbaO9OaBL0y/2DtbFr
+        xQKQE/ld3+XuZKbBOHLzaG0ftWAByEmibwcrYSy5WWW9bmNnAcjBRzjFncgsGK9e7wa0ANgHQQmNdSdR
+        Q53cw7Cf9piLOvk8QIKl7S9PZQHIgvGC+yh4jXaQGmpvwyztMQ21tf4qWFgAMvgGvbSD1FD7IrZpj8Wh
+        XrvePk8WgAwmaQeooVb+/MuviESSXwLLdQC1vIm1BSClzdrBxaF+QaR3gVYTh3q573F033myAKQg/yK9
+        XswJas8s9UT7e2u1GmqzLgJRiQUghTu0A4tD/VKnXzyi1cahfhR8rjNMygKQ0Gtopx2YhtrzoX2oI9v6
+        az1xqH8i0p8XC0AC8gLuEu2g4lD/dKTf5f0WUlAv6w95rZWfgAUggXu1A4pDvVweXulTK3nsIq03DvXT
+        Iv15KAsA2+ziUIVcl9fZnaxKqN8c6Y+zQeuNQ71cYLI70p+VFgCZZK22oeQZAHnxdZU7UZVIfaS/mqRr
+        A12GJMvPVGIB8PC4O0nV0JPkX+l2bYxK6HnIGSMtC0AVX8D7kztB/U2Rfl/jtLHiUN8dcoWxNlYSFoAq
+        bnYnqBLq2+GdSL+vN5B04YkJkf60LAAVJHqBJui51RkjiQnamJXQI18waWP5sgDEkBWpvRdvEtR3xvFL
+        wNOQdxodtLHjUC/rEWb5JbEFIMbt7sRUQ8+dzhhpeC8ccRw9WS4itQAoXkHS/4/lJ93flvqzOIwu2j7i
+        UC9/eWQ1U228aiwADvlzmmaF8Dx/w5f42gJ6xjlj+NICMADajRp8yM0h3H005A0jQlEWgCwYL4ivg4vE
+        AhA4C0DgLACBswAEzgIQOAtA4CwAgbMABK4sAGzLcuvYHXD3Idu02rS8fhhrAfCjBcC+DQyIBSBwFoDA
+        WQACZwEInAUgcBaAwFkAAmcBCJwFIHBFDcARC4Cfogag2QLgp4gBkNvrD7AA+ClaAPajSZ6HPBGvpUQC
+        pwUgyxIxJ8swnHDntuNPRlboHANZbHEtDsBrtelAlAWgKNSNgifdDSMwHSshly7Va33+1ia8AGiYiI4Y
+        gimQhR13opZr9LYWFoA4TI6syCV375iIRdiKo9AmslFZAJJi0uQ3c3J3T7kufyMOQZvcRmAByAMT2Qtj
+        MRfrZGLRCC82LQC1wuTK26mRmIFV2AtZblY7ESeLBaCemPBOaMJULMMuyCdX2smpBwvAycZJkKXlBkFu
+        GrkYct/AvBeFjmMBaK04Of0wHnK3kU2Q9YO0k5iFBaCRcMJ6Q9YDmof1OIgsN5KwADQ6TqIsGyt3FJmJ
+        1dgH3xebFoAi4sTK0nFDIfcXWI49OAYLQKg42e0xGJOxBNuwW6ttfC1t/gPrQuJz8PwchAAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="BtnMail.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAfowAAH6MAfYZ+2wAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAAKwUlEQVR4Xu2daawlRRXH+3X3nRkdNncURgyYGI0iIMaocQnRUXFAiH4x
+        GmNkogRFiOGTURNDQmJcUFw+4BbikugHBLdMCDGYADG4RyNGM7iBS4iKyCg4DM///76uSb2+p6vq9u2l
+        +tZ5yS+ZV/d/qqtOnffuOe+e7sk2NzeVhBEHlXQQB5V0EAeVdBAHlXQQB5V0EAeVdBAHlXQQB5V0EAeV
+        dBAHlXQQB5V0EAeVdBAHlXQQB5V0EAeVdBAHlXQQB5V0EAeLjbIAp4O3gk+C74IDyqTgmX0a7Adngx3S
+        WS8MQPgScCfYVNaKg2Bv/bztg98AnwGPAGkCZT24DuQLAVAFwXnggUqorB//BvvsM98WAASCM8E9lYGy
+        PtwNzqif97ZvDBCeDH5WGSrT56fgJOmsFwYMMDgGfLuaQJkuPMNjpDMm4qABhiwHWQZKEyvxcw0opLM1
+        ZGVWvlJ6wQaTXAaOVJMq8cOzerd0ljZFVuzj4R4ustnbJIENdFohTIOFTF8iz2aXQPcwD3ZuWObllZLQ
+        BjqtEOKGmf6Z0tkZ8LWBs/6wsTkaAHPy2ZchEP9kaIBOK4Q4acz0DfjahTP+um23PQC2uAXCx0gTGKBh
+        hfAdy0YZF2emT/D1eGhus2zmSAGwWW6UdyJYniZNZIBOK4Q48Gf62c6nFxvFb2t2c8QAqPjrLJs9X5rQ
+        BjqtEMYhKNNHlfci6O617LbhCgByCKXC66SJbaDTCmFY6Gtvpo+zewN0/7XsFvAFADmCksFfU2qFMBT0
+        sTPTJ3lWXgGd95PdkACYg9LharyZHP0YUQI6rRD6JSTTL4q8YCOIZL9AcABUXI8LPEq6sAEarRD6ISTT
+        3w3NtywbL8sGAPkBLvREaQEGaFghfMqyUVaD1ZYn089OhOZHlk0QbQIAFAdRWjxDWogNtFohrEZQpp9l
+        O55VbMx+X7MNomUAzPk7SoyXSguygU4rhHbQZ+dJPrXBGZwD3X2W3VKsEgDkQZQab5QWZgPdWUArhHCC
+        Mn34/i3Q/c+yW5pVA4A8gpLjvdICbaDTCiEM+uhkyYc28PkHanat6CIAtsiLz+LNqJQWa4BOKwQ3IZn+
+        DL7+Ys2uNd0FwBYHsMBjpYUboNEKQSYk0z8empstm5XpOgA2c/wKw0Kdf6wg0GqFsAV9cJnkIxt87YFv
+        f1GzXZnOA6Di7lk2e660ERvozgcpVwhBmT58yT+z/9my64y+AoDcjxLlVdKGbKBLtUIIzfTPhY5tXtIc
+        K9NnABD2G+6XNmYDXWoVQmCmP7sYuoctu87pOwDmlHl5Fd7DNqRNGqBLpULgHn2ZPvv2PlSz64VBAmBO
+        PvsqNrZT2rABunWvELg3X6a/E776Ws2uN4YLgC2+jw0+Vtq4DXSXg3WqEEIz/cdBd6tl1ztDBwD7DX+d
+        ZbtOlRxgA+26VAhBmT5+8E+Db35Ts+2dwQOg4m8obV4gOcIGuqlXCFz7WdLebFAtvRC6xr69PhkrAMh/
+        UOJcKDnEBrqpVghBmT588HronH17fTJmABD2G14uOcYGumPBlCoEb6ZP8qx8D3Sj5jpjB8AWeXEN3gR9
+        /YZTqRBCMn327UVxT0UcAbDFDXDMoyWH2UAXa4XANXl/m3GP0H3TshuVmAKA3AEHPUlynA10sVUIXMv5
+        0lptuDfofmjZjU5sAQCK32XZjmdKDrSBNpYKISjT5564t5rt6EQYAHP+gdLoZZIjbaBjhfBzy25ogjJ9
+        7OXl0P3TsouGWAOAPIQS6U2SQ22gY4XAp2JKc/QJM31n8wvBHt4M3UOWXVTEHABzUCq9T3KsDXSsEILv
+        hukAb6ZPsPb31+yiI/oAmJMXn8ebqLPfkEDbd4UQmumXWPMXarZRMo0A2OImOPY4yeE20PVVIYRm+sdB
+        d5NlFzVTCgDTb+j8SJlAywqhyxaqwEw/28k11myjZkoB8AASKu+zCgzQd1UhcA5vpm/gGqGP6W8UTqYS
+        APfMspn3J7AO7FatEGjrzfTrcK2wm8SnmNEHAH6l/gS/Wr1t5k1gjrYVAm28mX4TXDPXXpszOmIPgBvh
+        yN2SgwlePwmcI71WB7rQCiEo0yfQ8cbMxuDk2vH6jUC6ThREGwBlXn4UDmz8hBCaMwAfjHgYXCRp6kDn
+        qxCCMn0C3UWA1xYfw27gHrgXaKTrjU6MAXA4z2bvkJxpgGYfqPfKe590SqBrqhA4FpRnQHelZUe4ltdK
+        WgP3BA0DxrYbndgC4L7S8/BqaC4FTb3yXwLOJ50SaPYAu0Lgv/dIWhtodgBew76mgWu6VLIzcG/QtL6X
+        vw8iCoDiLj7pQnIcgYbJHB+KKNhu43vgeGkOG2hMhRCU6XNOwLmla9p8AjS+dW09zaO4q2YzGrEEwG3w
+        zBMkhxG8zptGlnn40S/BU6W5bKBhUHkzfc5VzSldS4JrbUxeuVe8vvDY1jEYPwA8N4xAw0yfj0eT7Zvh
+        e7r33jsfnKOaS7qGC5aAT5HmJNwz916zGZxRAwDZ8Qcl5xigMZm+aB8Ak7PXSHOHQNtqDmnuEP4EnHdJ
+        0wc1m0EZKwD4bCHnZ/3QSJl+G5icvV26hgvaVLbSnMvAPZwrXcNAX0DzoGUzGGMEwL3Ihl8sOcIAjSvT
+        b8tVwHmDKqGm0kpztIV7eZd0PQN9As3gN4cMGgDVY+gbbwuDJjTTb8tXQGOZyNcqjWTbBR8Hjgph16n0
+        Uc2mV4YMgJuxwxOkjRO8vmym35ZbwMI6OFa9Jtl0CVvCXRUC19Hpc4BcDBMAeXEtNtbY0QNN20y/Lb8C
+        p1jXP6Uak7R98GPgqhDYUXRtzaYX+g6AI3lWXiFt0gDNqpl+W/4CnlfBf0uaPvFWCPQdNH22uPUaAGzg
+        uEDamAGarjL9tvDDnzGbN+4HvgrhAmh6W2NfAeBt4ICmj0x/itAH75R8ZOizwaTzAMjxXo73sMbPyKHp
+        O9OfKlcDR4UwbzDpPE/qOgB8DRxDZfpThc0jrgqh8waTzgKgzMuPYYGuBo6hM/2pwgrhyZIPCX1MX9ds
+        WtNFAIQ0cIyV6U+VP4LTJV8aumowWTUAQho4xs70pworBOcHWV00mKwQAO4GDgKdZvqrQd9dIvnWsGqD
+        SdsAuB1XdjVwaKbfLXzPd1UIbDC53dIHs3wA+Bs4NNPvhxtA4yN0eCZtGkyWCoCABg7N9PuF/y1cY4VA
+        lm0wCQ2AkAYOzfSHgRXCc6QzMCzTYBISACENHJrpDwsrhFdLZ2EIbTBxBoCvgYNAp5n+ONDnF0tnYghp
+        MHEFgK+BQzP9OOBtZ64KwdlgIgeAv4FDM/24+AZwVQiNDSb1AAhp4NBMP074AMoTpTMzSA0mdgAcCmjg
+        0Ew/bv4AfBUCG0wOGRsTACENHJrpT4N/Aef/1mY3mGS+Bg4CoWb604KfEjo/oeWZV2fvbODQTH/afAS4
+        KoTd4gsEhprprwfXg+YKQRqEgWb668UdQKwQFgYg1Ex/PWGF8Oz6eW/7BgLN9NcbVgh77TO3Dz8H11VC
+        ZX35HDh6l/TRADDgxb3gYCVW1gee6Svq573tGwOEvE36bLAf8ImZfJDSAWVS8Mx4djxDnqV4W/zCgJIW
+        4qCSDuKgkg7ioJIO4qCSDuKgkg7ioJIO4qCSDuKgkg7ioJIO4qCSDuKgkg7ioJIO4qCSDuKgkg7ioJIO
+        4qCSDuKgkgqb2f8BsZNDIc8amIgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="BtnPrint.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAbrkAAG65AXtnkHoAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAAFqUlEQVR4Xu3dQXIUORSEYSZmjuENZ2HDYdhxL4IjcASOAvuJ8eiZLkZO
+        /h7TlMiuinyLb8FDT2WlhN2uDrpePT4+tmBYbDmw2HJgseXAotOff/z1mEzzcMOiE4WSRPNww6IThZJE
+        83DDohOFkkTzcMOiE4WSRPNww6IThZJE83DDohOFkkTzcMOiE4WSRPNww6IThZJE83DDohOFkkTzcMOi
+        E4WSRPNww6IThZJE83DDohOFkkTzcMOiE4WSRPNww6IThZJE83DDohOFkkTzcMOiE4WSRPNww6IThZJE
+        83DDohOFkkTzcMOiE4WSRPNww6IThZJE83DDohOFkkTzcMOiE4WSRPNww6IThZJE83DD4jXjC34Y3g8f
+        h8/DlwEXttE5FPUk0TwU9Yjag9qL2pPamwea5xosqjHpm+HT8M9AX8RVOpeiniSah6KeF9Qe1V69ofkU
+        FjdjktfDh4Eu9FN0TkU9STQPRT03qL17TfNusFhG49vh62WiX6bzKupJonko6rlR7eFbmrtgcTS8G/6+
+        TLCLzq2oJ4nmoajnF9RevqP5fyjUwKlxN51fUU8SzUNRzw4/HIJnfxgD6tv+kn/5m3l+Qj1JNA9FPTvU
+        3j77cTBfqF7w7f6Zr7b5r6GeJJqHop6dao+/vzCcL7Tr1f412/zXUE8SzUNRzwIftvm3i9Tv+TRwt+1C
+        11BPEs1DUc8iT/cJtovUjQMatNu2kGuoJ4nmoahnkU81f12gbu/efIfvZ82LIdSTRPNQ1LNI7flDXaDu
+        H9OAJXRBinqSaB6KehZ6XxeoNxHoL5fQBSnqSaJ5KOpZ6GNdoN5Jor9cQhekqCeJ5qGoZ6HPdYEX39Ld
+        QxekqCeJ5qGoZ6Evv30DdEHtNpTpSn0ADo4yXakPwMFRpiv1ATg4ynSlPgAHR5mu1Afg4CjTlfoAHBxl
+        ulIfgIOjTFf67Rdox9YHIFwfgHB9AML1AQjXByBcH4BwfQDC9QEI1wcgXB+AcH0AwvUBCNcHIFwfgHB9
+        AML1AQjXByBcH4BwfQDC9QEI1wcgXB+AcH0Awv32A6D/0aHdhjJdqQ/AwVGmK/UBODjKdKU+AAdHma7U
+        B+DgKNOV+gAcHGW6Uh+Ag6NMV+oDcHCU6Up1gf6gyDvSPBT1LPT0QZH9UbF3pHko6lno6aNi+8Oi70jz
+        UNSz0NOHRffHxd+R5qGoZ6Gnj4vvB0bckeahqGeRbw+MuFykHxlzJ5qHop5Fvj0y5nKRfmjUnWgeinoW
+        +e+hUZcL9WPj7kDzUNSzwPPHxl0udMgHR+r4s6E1zXS8op6d+MGRl4sd7tGxOv5saE0zHa+oZ4frj47d
+        jAGHeni0jj8bWtNMxyvq2eH/Hx69qYHDku8EOreinpmOPxta00zHK+r5BbWXP/f4+M1oqB8Hu18T6LyK
+        emY6/mxoTTMdr6jnRrWHz77tz7C4GY31wnDXbwc6p6KemY4/G1rTTMcr6rlB7d33F3wEi2pMUvcJ6mbR
+        zXcMdS5FPTMdfza0ppmOV9Tzgtqj2qun3/NfgsVrxqR127jeO6g3kOpdxBffStY5FPXMdPzZ0JpmOl5R
+        j6g9qL2oPam9eaB5rsGi0/iCaVExNA83LDpRKEk0DzcsOlEoSTQPNyw6UShJNA83LDpRKEk0DzcsOlEo
+        STQPNyw6UShJNA83LDpRKEk0DzcsOlEoMx1/NrSmmY53w6IThTLT8WdDa5rpeDcsOlEoMx1/NrSmmY53
+        w6IThTLT8WdDa5rpeDcsOlEoMx1/NrSmmY53w6IThTLT8WdDa5rpeDcsOlEoMx1/NrSmmY53w6IThTLT
+        8WdDa5rpeDcsOlEoSTQPNyw6UShJNA83LDpRKEk0DzcsOlEoSTQPNyw6UShJNA83LDpRKEk0DzcsOlEo
+        STQPNyw6UShJNA83LLYcWGw5sNhyYLGleHz1Lw75JuOmdoTfAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
