--- a/Pizzeria/Pagar.resx
+++ b/Pizzeria/Pagar.resx
@@ -117,4 +117,202 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnOtro.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAB4EAAAeBAE0wfhfAAAAGXRFWHRTb2Z0d2FyZQB3d3cu
+        aW5rc2NhcGUub3Jnm+48GgAAE1FJREFUeF7t3QlwHNWZB/BwJGxIQiUsW0kIJgcxhsQkBDYsbKCW5dQI
+        mw3ZXXZDUlQ2m5Bka0OxRbK7hGzKhTUj3zjmNL7tmZGRZQG2UXzLkqzLBza+NJIxAcuaGUnWrRnd8/b7
+        Rgfdb/4z090zremRW1U/y3rq43vva3W/7ul+/TEhhO0CBguntLqHbhU+x1PCl7tA1OduEPWOPfS9jrwv
+        6nMq6XdFVLaMfn5GnHbMFo3//Em4nCkCFk4ppXdfSkm9ZzSpjrNE6OJzhOh7MXlcnHzwSriOLAYLp4TR
+        xP+KEheYSGbqhmjP8ao4mfsFuM4sBAuzXkPODyhZ9VLy0qlXNDieE76HPwPXn0VgYdY6M/taSs5+KVlm
+        aqZ+wyMwliwBC7NSfc6dowmBiTJThPyBQrgIxmVxsDDr+HL+nZIwoEjK5GtwbBL+2ZfD+CwMFmYVX+5c
+        mJBM8DkO06njFTBOi4KFWYNPzVAi9PDliMipe8XIibtFpO6+6M9wOu22CjHnYhivBcHCrHDacTs1dr/U
+        +ElxkoeO3Cb6qm8QobJrRW/p1ZIviVD5V0R/7U1i+N07jW0QDY55MGYLgoWWVz/rS9TQus7vR07eK/qr
+        bwQJTyxUdo0YPHSrEHUPwuXG5XP8CMZuMbDQ8hoc22GjI/QXPHDg2zC5evDeYujo7XgdCF9B9N1/NYzf
+        QmChpdXn3AsbHIicul+E938dJtSogYPf0nFYyFkB62AhsNC66Fybe9qwsdVGTt4d5xifur6qGVo3gmHq
+        q3wD18UaYKFlNeQ+Bho5RqTu/mhHDiUvXfprZsJ1x/A5tsC6WAQstKx6hy+mgWX0l9lXOR0mLd0GD/81
+        jkHWkHszrI8FwEJL4l0palwJJwUlyyx8doHiUOEPjlCdLAAWWhLfoIEaVyHie0CE9k2DiTJLfw0d4kEs
+        kndhnSwAFlpSvaNaatQYAwdvhkkyG19FRPGo1OV8BdYrw2Ch5fANGKOfuuHGHRMq/zJMkNn4OgOKR6Uh
+        50lYtwyDhZbTkDsLNqrCyIm/g8mZDHzGgWJSaXC4Yd0yDBZaTkPOL2CjKgwc+g5MzmQZOfH3MK4JDY5S
+        WLcMg4WWo+EjXyPX+dNp6OgdMC6F07BuGQYLLcfnWA0aVCVcmd5LvnppuCYQhnXLMFhoOT7HDtCgKqEK
+        c6/8JTNwUENH8NhDn4P1yyBYaDn1ubtggyqYfek3GT4FRXGpzb4K1i+DYKHl1OeuwQ36kb6q62FiJsvg
+        kdtgXAoDVBXL3TgKCy3H58gDDarSf2AmTMxkGT72PRjXBJ/jQ1i3DIOFltOQ+0vYqAqT/RmAbORkktNA
+        vpKJ6pZhsNBy+CFN3KgTho/dBRMzGfi+g6T3B/BDp6huGQYLk+ndXDuLLCBLyDLyEnGSH5NbyafQfIad
+        dlwHG1USLv8qTJDZNHUA+YlkVLcMg4XJUIJLiUggQj4gbvIjknrvlz9RQw2rMPhOZg4DI6fugfGonJo1
+        HdYrw2BhMpTQvyLJNgKlEVJL5pBb0DLjoekvIneOvPuT12DDKkTqHhC9ZdfAJJmlr/J6GIvEklcBGSzU
+        gpJyKVlKUMKTOUF+Q+I+Zk2/+w7hw8xZIsIlbxwBDRtj8NAtMFGm2HcNdf40/PU3OJaiOloBLNSDkvMk
+        J8igYbKN/BO5jEwnfyB1JGZ6UTf7fdjASnxLWNUMnLA0G3znuzgGyUD5gidQ21kBLNSDEsO76EplogwK
+        gTKVwcq5VaiBZXwoMPvScF/1DLhuWeT4Dw+OxV9IPo/aMJNgoV5UMd5d83E+JmnpVR0WvlmaBn7g+wNM
+        uy28+gba02h7Uij8pyLuDI/XoZ38FLVhpsBCI6hiLysqapr+PSvKUEMjkVP3JXwwJFQ2bSRc8bW+8P4Z
+        beGKbzeGy29pCpff3ByuuKm5r+LG5vD+6R2h8i8PKefpr52Z/Jx/zMixHx9FdSB7yHWoHScbLDSCKnQt
+        mYS9QK2InHy0EjU4RMnqP3CTCFGHLVxxfWdo711nOjz/+UFwwcp2v9MTISKZ4IIVofa1/xvs2fYvx4YO
+        /it/MBWMWU+M3N7wtm2tKP4xYfJbcglqz8kCC42iypSMVc5U4W0lZ6iRu2MbPcbA0OFHKzo8z5UE8tcH
+        UHKNcQ+0rVhU07/vZzsidQ9xLDHrHihfvB3FDvB06b1wpgMsNIoq8oiiYqbq372a9wJ4VBBf7unQ9id3
+        BxetDuEEppNbdHrmHo2cePjo+PqHj/yiAsWcAF8j+UvUpmaDhUZRJfjaQGCsUqYbrJi3lRr8o7uFfbkt
+        vSX/Vex3eTpwspLILxCB+Rvx7zRoX72gbKj2iX29xVVGDoV86jsNtauZYGEqqBL5ikqZbujA07wRDPSX
+        /3RPYOGaFpQYpQAlueWPb4r2FTtEx7q9ostdJro3VoqeohrFcmtEz+tVostbITo3lIqO1btF68vbqC/w
+        Olymmle0vrCFlrlfsTzNGsmkPkwKC1NBFbiO8GcBqIJp1+2poISu7MTJGMWJ4wR2UsLVidavmzaKthXb
+        RfPzxYL2NHB9o7yifeVOuIwk2sjtqG3NAAtTRRXYraiQafgv2J/vBY0/qnlxkehcXwrnTYdu2kucf2lr
+        wg2h9cWtRjY6vih2N2rbdIOFqaLg/0NRGVO0Lf8TbHAWXFgoOtbshvOZgXf3rS+8BWNhzUs20yGlEs6b
+        QDP5ImrfdIKFqaCgpxH/WCXSrmdTtWiJ09jcgWtftUv0FuF5zdblKRctS9+AsQUpNu5voPkS4E9cTb1O
+        AAuNomCvIMfHgk873pXybh01cPPizbRL1v1XZop4e6eAy2vkkGTqo+Ww0AgK9ONklyLwtOPdOmpY7nWn
+        2rlLt861eyjhBTGx8uEATZ8An1Leh9o8HWChERTkakXQpuhYtTOmQdupR46mtQI+jZRPHZsXbYLTJhEk
+        pgxRDwv1ouB+ogjWPHT8Hz8EBBduip6jw+kshK8nRPssdKbAfRTeM6DpNOAPkNI+Aiks1IOC4hs5onft
+        TBa+cIPKrYw3hDQcpn6NcpAKWKgHBfWUFKTNPOfIZSgPiH/O8sv9eZ4dfqf3HO01l4vCwpgzCtUPelEw
+        nyEtY8HZJsevUC6QgNMzT9n/oMPQ7+RpVD/oRcE8IwVnMx/fYfRxlA9ZwOleJm0Ax+RpVD/oRYHUKAKz
+        TR5Nt5UFXJ7fqDYA0pi/4evKaVQz6EFBfJbwXb0owFjFB0R/7Wkx2BAQQ41tYuDEWRHefRxPa0vmvcBL
+        Wz59zuW9g47xT5Iicpj+wg82OT3radf/lH/uxhv9ed475Q2ANgrVIUSVVD0oiB9IQcUV3nVMjHT00mzS
+        V0TQBuEXvW8cgPPZYvGZRNsrJZzMYTm5MtoQ3qPvI6ryPI+TWn4ij6qk6kHBvCIHh4S2HBKR8ADNEv8r
+        uhGAeW1q/FlDcNEmVZL1CuR5VlOTT+RRlVQ9KKBTcoDI4JlmmjzJF+0J7MNBYl3ufUnuP9Am4PS+RS0+
+        kUdVUrWigPi6/5AywHgioX6aJfnXwPGzcH4b7/arRXBBIUwobRTNo+f6ngYypPodQIeFWmruiVyqEqsV
+        BXWjHCTCu3+tX9wxRMuw1YrWl7ahZP75nNN9LzXdR7mZM+diKn+C9Cqmkw1xB3F8no9m1oGC0tYBLKY9
+        wNAwzZL8a/B0AC/jAsc3m4Ak1rXOXxX3tbVNczfMoGl6pHkU3DXjVwXhApKhwJ6VA41nuKWLZkn+xaeI
+        aP4LHfgIfJg6crdRk8HcjPO73D+X5lOh08X/4engzEoUxCXkLyQFBAYs69t3MtrJS/TFp4h8nQDNf6E7
+        /8rbcvJUx/C45pReStMmOlXs/zDf87mYGWmlV5GnSTXh+9JSvsOXL/rE2wj4FJGvE6D5bLWieWmxKnH0
+        l/siNVtM3hCavlk5r4w6hI+rZqAVcufuQ2UA6cJ7Aj4cjPcJ+OyATxG5o4imt42K3n6uTpzmwSYCTnet
+        NG9Y+nnzxMS0su8RfnwZBpI21DG0k65d7CHAXalMclyjZwTyo3Hvqn/21kcnphXxk719yhXbrIGfSlIn
+        zTMQcLmTPj0UcHofleZjK6WfB6IT04rmySu2WUN3QYUyYeMOiuXL434kfHZ+wdU0zXlpnt6gy62+P8Dp
+        iXDyuVd/XrlSm7XEeejkSKPT+y05+U2uDQ/789wxj8I3udz/Td9flso7eQP4N3mFNmvpKawWgfnwwdRh
+        vsmDdverqEdfQD+fkX4fRb+rGusTHJR+V8sbwGvyCm3Www+2SsnTKtQ41zOdrxzS/wdUv3N5n+cN4G15
+        ZTZr4qeKgnhPEM+hoHP9TD400P9fkX5HG8CGu3gDiDeQkc2CegqrROuLW9SJjDVAh4bf89VATn5wrvce
+        KpPHQzrJhwXeAOwOYBbi5yA71u4Rba+WiJalxfzI2Qd0Xv+sP9/9QOOcwivHO4WB57zfpGTT71TJHw7k
+        u7/Lv+cNAK7AlnUKx5MeVVh4id/pfoaS3S8ln3hd49PZG8DUsaM53/M1vgDU5HQv4LOD2MQTl+fEyTmF
+        n7A3gCmER0oJLtwkX+ePQaeDTeecHtWr7O0NINsV1Wo8M3Bv4I9/lcm3N4ApgM8KeOAJnPSoYFOe5x/k
+        xI+zN4ApgM8EeFQyRdL5RpCygNP99DnXuoQDUNobwBTR/fr+YT7fP+faeD0/FYySjdgbwNTRgRKcDG8A
+        PdKCbNnJ0IspeQPwSQuyZafjKMHJ8AbAY8+gBdqyi7ZbxSS8AayTFmTLTgUowcnwBmCP8jE1PIsSnAxv
+        AF8kg4oF2bLT91GCk4n+QzNrftLHZlmqoV+0iv5DM98hLcyWXfieDkODSE78hxbwO8UCbdlluTKpeqh+
+        oAXxkK+aBn6wWYrhl0vEFNDC7iE86vekvAPQlrImYngMYVjIaKFXEn4lrIN8f4yToCBsmfM8yp9WsDAe
+        WhmPDTSpA0PbkvoblCutYGEitMJUXhdvS68zKEd6wMJEaKWXE3uAaGtQDfpoBCxMhlaseYwgm2n4bG0G
+        yo8esDAZWjGPE9w1FogtM+aj3OgFC7WgAOwxBTLnfaL5tq9EYKEWFAC/LMK+mSQzclBOjICFWlEg3yS9
+        isBs5jP0uX88sFAPCugxKUCbeXgQr8+jPBgFC/WioF5UBGkzz89R+6cCFupFgX2C8MCSKGhbevAb2S9C
+        7Z8KWGgEBXcN4TdcouBtKejZVF1F3z+N2j1VsNCowPzXPd0F+/kUBVZED343f+eaPdFhUaz2XuDJ1OWp
+        OBxweo8lGhYuFbDQiLEhyqMPI3a6y46gymjFbwZVvnM3MK9AtL68jRpD9+vXs1qXt+KdgNPjj7aBs+Ah
+        1O6pgoVG+J3eReMJI90da3aXoUpp0bk2/ohY/M6c9hU7ok/Fonmnii5P+dHx5I/xoHZPFSzU6/Syksso
+        wFZFsGywbXlJCapcMl3uMk3vx+EXSfNYuvxCZh4zBy0rG3HyqX7yYI+9wYXrP4XaPxWwUK+mPO8PpWAn
+        UJKqegur+1FFE+mg4z+/bRstM57g/MLoqJq8h+AXLfDbxbu85Un3FvxOntFpMt/X6Fyz+wTVpU2u2yj3
+        Y6j9UwEL9aLg9sUGq+Dy+Cmhh1GFE6uJjoTV8sc38XJ18VJfYmN0NA3+7s/3xu5l8gvEeepr4FjMVtPX
+        srS4TBWPLM/zNmr/VMBCPRSdv2QiwUVFO+mUJoAbILEe2sW3rdhOfYAitOy04kMQisEs3d6KQ35XAR7U
+        SW3IP8d7FcqDUbBQD6nzp8Wf21/bzn0D7a+dlfApIg+j3vrClnhj6KaEX9CI1muCEPVh1tE6O+UY4pFf
+        /ZoqWKgZnZtSUPKw5JoE8r0NlMQ60Ci60V8QHfN3RYdKaV32Jo+YpakTifAonGgd6da5vvRowFVwCMWQ
+        mLcY5sIgWKiV3+W9AQepXSC/wNexelc5NUqan0eoiY61z7tz7gzymQLvNTpW7ox2EqNW74p2NnmYta71
+        +2j6/WA56UXn9kE6lT2C2kIbdw3KhVGwUCu+OIGDNMDlPUa7w5LeTdVTcuja7o37K+mMqITqOhhTd33O
+        olwYBQu1anJ6fw0CTFWY/kKqOtftfQ81ZFYpqu1uW7nj7eC8glKqV9K3fWsUQrkwChZq5c9zPwICTB+X
+        t7F91W7+qHkvyZpH2LsKKk63PF/M7/ONeXNHGhShXBgFCzUb7QS2SAGm02Cz0xu9AYIalm9Be4TwCy6s
+        9nBKK3mL/Pb8qyWPg3qkT777gZg8pAAW6kG97cUw0PSIu7VTY88kvyTLCH9W7icoOWbgw9Na8jNygyq2
+        6Cjd8a7kpayB1pHWewJgoR5jryLZKwWaLg+idcZDyeDb1f92LDFLCF9vOEj45lXeQHhIvERvQuUHYrkT
+        Wk/4M/ithBO9mPDj8/9IvoDWrURxL5HqkQ6+4Nz1X0XrSwUs1Gvsw6DNUsCpyfO8w2+0QOtLBSXwYnIF
+        4RtYvkFuJdMJPwyblvU1Lin8JNXBF1Mng/ilT8mGfDUKFhrCb6XK895Jwf4fdd5Kx15dFtSLhzT3O72b
+        /PPWXwvXkyWa8gqmRdsiz8uf7MG6JsAfA++kw+vv+b0+Zt0MwmCh7UIhPvb/bddVrzz0UmMAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnTarjeta.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAHosAAB6LAWc82tYAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        bmtzY2FwZS5vcmeb7jwaAAAHv0lEQVR4Xu3c/VNUZRQHcPiRP0CDRasJEKV8Qc2ANF8qGt+miVJUXtQU
+        TVHELFMHTVJrBjVNU1MJ0VEpHQdLGzUbhiwy381UVFZ0UUQR0F1YwXGc0/NcWdjde3bZe/c6k5zzw2fG
+        zp5778OeL3vv3V0KAABGGFpkdKBFRgdaZHSgRUYHWmR0oEVGB1pkdKBFRgdaZHSgRUYHWmR0oEVGB1pk
+        dKBFRgdaZHSgRUYHWrz/Z2iQECMkCmPYM03OUM4yCJu1y3+IpjjhmPBIANauyJnK2cY5z9wx+EBhhfBY
+        wDZm7YecsZx1oHMAMpofZHRkKAEQ/wgX7E4PMBrkzMNlAHKcioyWHBmAIrcio6NIBsDqVmR0WGUAsAcY
+        ERwA4jgAxAWc2tULGF0Bi2elAqOLA0AcB4A4DgBxHADiOADEcQCI4wAQxwEgjgNAHAeAOA4AcRwA4jgA
+        xHEAiOMAEMcBIC7g2M7ewOji7wQSxwEgjgNAHAeAOA4AcRwA4jgAxHEAiOMAEMcBIE5bAEo6Q/2ZYWAv
+        mwt28zzDNFxMBevRCPSY1qPh0HAhGd1ON7H++rPDlZ8HOyYlmgJgL50KD6v3PhVNNzeKY3RSHbPxxjq0
+        3wj2y+mq41GjKQBNlbnoE2kU28lYl+PZjvdF+4zSdCvf5XgUaXsFKJuDPpGGqNomXpKfdz2meIluqtyC
+        9xvAbv7M9XgEaQqAPE83XJwEjZaV0Fix2jDynGw7EYMe03ain/I4tp1+X0NDaZr4eSLRY1Ki7SKQtTsc
+        AOI4AMRxAIjjABDHASBOYwA6ge30W/DgymywX/kE7JemgfV4NNL3hO30m6I380lvM7mt7fQgtF+yHu8j
+        9pve3Jup7APrk+Sx5Rqc9y/fq2g4lwD3S17AtxG3fvXnk5SfA3vnkRpNAZD3zuo3VAqVe3VV74UJSG8r
+        OQT3bWwn49BeuS9VrzimPDbWLzVe+1K1jQxFU9X2lh775RnqHmI0BaCpcrPLk+ztiWy8uQHtdWisWKPa
+        Rv7Go71iX+698phYb6tC1Rs9trPvuPTwW8EaA2C/8qnLE+hgO/O2qtfTMB2wD2Lqzw5De+W+3HvlMbFe
+        B/khkvs2MhAP7+xp6XlgzlL1UKMpAPIJlJ8Iyt9e+QQ3Xl8ODf+OEo+pz6XWv7qI3rTWXoeKb8SpZLLY
+        F/Lxb0lnaDg/Gh5YVjT3rhG9U5R9qXrFMeWx5Rpc9n/jWyWo8lpCvY28LhHXMOXZ4tphOlj/jkJ7DHEk
+        FOr2maBmtwnuHUYeb0NlURj8sz8ayg5FQe0fT+9ja40Xgcybu9+b4Oa0YCiP7Qhl4R2g7KVW5m4dwDKy
+        I1QtDoG6X0yqbc2Hu8KmjYkwbv4S6D5pG4Sn/tgicnwBDJ65DhYuT4fi3QNU2/qDA2CA2v0mqEh4zmXg
+        3sgwVC0Jbtk+b/MHqqF7MzHrczD/2s1lDXpxAPx0OycYzN3Fbzwy6LacSoiE5LnZ6JDb0jstHwryR6Jr
+        0oIDoJM8r1tG+f5b7y6vXzz0GrcFHa4WaYuylOsFbI2+4ADodGO8/uEf6t4TuqbsQAeqR+ayOegafcEB
+        0KF6bQg6WF9cCguG+ISV6CD9sW9HPLrWtnAANKo7GApXo/Wd86WswRPRAforZmouWH7Dbpe94wBoVDFW
+        /0v//p59oUvqTnSARpiePQ9dszccAA3qfjKhg/XV5GFz0cEZ6dLBV9C1e8IB0KAqW/+5vzQsBHokbUWH
+        ZqTNm0aja/eEA6CBP7d9hdGx6MCMJm8LsbV7wgHQ4Npg/Rd/38UMRwdmtBEfr0TX7gkHQIOr0fhwfbHs
+        jSR0YEZ77aNcdO2ecAA0uNoDH64vlgxMQQdmtD5T8tC1e8IB0KB8oP5TwPrYkejAjDY0czW6dk84ABpY
+        3tN/Ebir9wB0YEabkLUYXbsnHAANbi3Qfxt4PiIUopKNe//fk7XrUtC1e8IB0EB+uwcbrq+SRmShQzOS
+        /BYRtnZPOAAaXR/x/z0NjJ2/FF2zNxwAjWoLQ8EchQ/YFzPjM9Dh+avHpK1QeqA7umZvOAA63F4ajA7X
+        F+ciOsPriRvQIfojL/cDdK1t4QDoZHlX/y3h7uj+EJH6AzpIPZIXfIGu0RccAJ3kV76vDdIfAvnOYGRK
+        ATpQLYbOXqV8dRxboy84AH6497sJbmUGg9ntK+C+OjDkVRgybS062LZETtgJX62aDDVH/PubAQ6AAWq2
+        m6B8gIZXg7AOyt8P3C8KhTvFLyrf948Y7/spIX7WGji6F/9/KmnFATDIveInF4eW98VtYldk6EJ5TEdl
+        8DXbQlTblxTGQFZOOgyasR4d+ssfboeJCxdBfm4CVB/B//JZDw7AUyBPDfJ28e4WE1SvD4HaApPyXUKs
+        FyO/23fi575woGAIFO/pr9ze+ftS7wkHgDgOAHEcAOJkAKzuRUaGVQagyK3I6CiSAchxKzI6cmQAwgW7
+        U5HRIGceHgCgXAdkOD3AaMiQs3cEIFBYITxufpC1X3LGctaBLQFwEMU44ZjwSMA2Zs8uOVM52zjnmbsE
+        wEE0BQkxQqIwhj3T5AzlLIOwWasKjBa0yOhAi4wOtMjoQIuMDrTI6ECLjA60yOhAi4wOtMjoQIuMDrTI
+        6ECLjA60yOhAi4wOtMjoQIuMCgj4D+icDTLsfHVqAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnEfectivo.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAB+jAAAfowF2K5KkAAAAGXRFWHRTb2Z0d2FyZQB3d3cu
+        aW5rc2NhcGUub3Jnm+48GgAADiRJREFUeF7tnUlwFNcdxqlKLsktOeSSnHPJJbkmlcolOcaYxQtgYytA
+        MIQdBGIRmkULWmbEvsjsiwGxI0YL0uwSWtCGJJBYBchsPiROTnGq4pf3KR6XPPp6prunR5p2v8Ov7Poz
+        7//e+/6fXr/u6emeIYRQOBgaVDgHGlQ4BxpUOAcaVDgHGlQ4BxpUOAcaVDgHGlQ4BxpUOAcaVDgHGlQ4
+        BxpUOAcaVDgHGlQ4BxpUOAcaVDgHGlQ4BxrUwhv350mqvK3+RcVR32/L4mU/YZ9T2Aca1EIWf6dEJPFa
+        Eva2Vu/3xqpXeuPVfyy+5f85a6/IPWhQC1loZgAt/uWN+bqkIU4Ut/oLimP+maVx3y9ra2t/wHIrpgca
+        1EIW1YgBtPhKMiS5IA3iKY5Xzytpq/61/5b/R6xPRXahQS1k0awwgBb/lTzxxvwB+V+1z5giaFALWZhs
+        GiAV3+4ziuO+Ve7Wqj+5wrt/wcaoMAYNaiGLMF0G0ELtMzKEBrWQgueaAbRQ+wyd0KAWUlC7GECLryXf
+        2Wd4YtW/c93y/5TN1wlMCuS3lP5+fbB02/pg2Sf5obI5+aHSP2wK7fjVhqbKn0nBqieI+X3jjSQiDyMH
+        nLTPmBTYECxdsyFUKjT4Whri7xvDZU8Kwjv6t4TL27dFKiKFscpQUawq5I5VRT0xf4cn5hvwxn2jUtAv
+        JfirY4LbBbrPcIVdP0zWzo5MCqQxgBn+LU3zShpmuCCyo3tbpLxVmia8PVoZdMWqwu64r9UT93VLoUck
+        LyU4frNC5Brfi33GpEAWDGAUrDL/2BjaMVoQLr+zNVzesS1aEZWGCRVFq0LSNDG3XGWk6Lm6ynwtV4pR
+        T9xf74lX++QeY3Eu7zMmBXLAAGb46ptVZmRzZEfPVqwy0YoITOOK+iLumFxlYr5uWRSsMq8k07XK5Nw+
+        Y1LApgYwjDTMl3Iv81Qelga2RCo6t0YrY4XRyrDcy4TlXmZ8lZnCvcy07TMmBZxiABMkVpn70jS9WyLl
+        bVsTq0ysKiL3Mm1yhemRxcQqgyuXVqwy3+4zZG6vp9U/3xP1/cbVfejHyXUzy6SAMoB1SMP8U64yzzaH
+        ywflGVOnPCzFtkerJqwyvk65ygyaWGUs22dMCigDTCv/kaZ5LVeZBwXRHX1yL3NrfAMcqQzLvUz0m1Wm
+        Vxog1SpjaJ8x490bq9dMZFHj5j0rm91RRe6zosUVWdnialnV4mpcFXQH1gW9gXUhb31+uKRpU7g0VBAu
+        jSbYGCpuWh10nVzSuLlyfv36jYl6wwBC4VyUARyOMoDDUQZwOMoADkcZwOHoNsDy5kJR2b5XnOw/Lfwd
+        +8WqoIt+LmepWy3eubxCzD2/XMw5vVTMPrZEzK5Z9H/k/yOGf8Nn8FmaI0dBLVAT1AY1Qq3Y5xhpDbCg
+        fr04N3BevHlzT3zxxfB3qB+uE3mNm2i7XGBu7XIxSxZ4ZsUC8Wf3e4ZAG7RFDpY7F4D2qEFyXVAr1Ay1
+        Y+0mktIA791YI+KPWiZ1MJGh5x3iAx0dTRVzzy0Tsw7kibdK59PCmgG5kBO5WZ/TATSH9qwmCVA71JC1
+        T5DSAHu6amjiZGoHa2n7qQR/qTOrP6QFtBL0kQurAjRntUgGNWTtE6Q0QO/TVpo0mbFXA+K9QGqnZYt3
+        Lq0Qb+/+iBYrm6BP9M3GlG2gNTRntUgGNWQ5EmgaAMePV+S4r8XKliKaB4yM3aZtMuVCx1nxdrF1S71R
+        0DfGwMaWKdCMaQmgNWvDQA1T7QU0DYANBkuoRX6khOYB98e6aRuzvHp9V/jq/LQo0wHGgjGxsZoFmjEt
+        AbRmbbRItVFPeQgY+byLJkwGLpsf4C7DcmVkJUnH4xc9Yv3RAlqI6QRjwtjYmM0AzbQOq9Bar6aoIcuR
+        IKUBLujcaMQe3qTtwdLmLbSNGbofRcVH1UtpAXIBjA1jZGM3A7RjmgJoztokgxqy9glSGmBhw4a0q8Dn
+        rwdTXnjwdeyn7Yxyc+iGmF38ARU+l8AYMVY2B6NAO6YpgObQnrVLgNqhhqx9gpQGAKuDbtH3NM47kBuV
+        wlgFbZeg+X49bWuEO6NtYk5Z9k/xrAJjxZjZXIwA7ZimCaC91gYbNUPtWLuJpDUAmBdYK3bL88kbw9dE
+        92hMNAzfEId6jqZ115qQRx6rMtscvZAuX3ZoNRU6l8GYMXY2J71AO2jItE2AGqAWqAlqgxqhVqgZ+3wy
+        ugxgBgxA73WEVFRd91GB7QDGzuZkBGiot5hmyJoBjvedohMyQqDnMhVWi7mlH4q913aJt9zv03+fDjAH
+        NjcjQEumsRVkxQDrQt6MT/3uPusQ75QupKJqAQOgbX37JbkZM/4FUDbAHDCX5PkZAVpCU6Z1plhugJK2
+        neLxy146ESOsObWJCpqOkSed4+3bB2+K1QfX089MNZhL8vyMAk2hLdM8EywzQF7jRhEYvk4Hb5T4yE0q
+        pB5a7zR9J1fnUIsoPVsiZk3jJWOAOU0cl1mgMbRmNTBDxgaYH1gnytt3i0cWXgVz1xZTEfXQ1HmF5hx7
+        OSCGn3SInuGwiPc3iOauayLaGxA3bl0QJ28eFrsu+0XRKdf4qpENs2BObFxmgNbQHNqzmhjBkAHWyuOQ
+        p9U/foHicM9x0ThSJ57r/FZKLw/GusXb3nlURD1cjp2heY3w8OltcbBur5hX/jHtwwyYE+bG+jMLtEcN
+        UAvUBLVBjVjttDBkgPMD5+lArORI6FMqoF5udl6lec2AVeNc6IRYUPEX2pdRMDfWj5WgRqx2WuSUAbDb
+        Xej/KxVPDx/5lojXGV54Ygw/bhdLdi2nfRoBc8v07CgdtjZA89ANKpxejjYconmtAIeFeeV5tF8jYI4s
+        v1XY2gBFV8xv/sC9x7doXqto7DB2YYqBObLcVmFrA7zvM3+sxfLPclrNkl1/o/3rBXNkea3CtgYYGeui
+        gukF5/osr9XsvbqT9m8EzJXltgLbGqBpqI6KpZcLkdM0r9VEe+tp/0bAXFluK7CtAU60H6di6WXgAb9n
+        wWpw75/R7yiSwVxZbiuwrQEORA5SsfQwVcf/BN4zHjoOvWCuLK8V2NYAVY3VVKx0LKxaIvrvx2jObPHs
+        8z6x9lA+HY8eMFeW1wpsawD35RIqVjo6BptpvmyDq4RzS8zdo4i5spxWYFsDuC55qVipwCXaN19k98pa
+        KgpPbqfjSgfmyvJZgW0NUB6oomKlovDEdpprqjjWWEPHlQ7MleWzAtsaYE9wHxUrFdtP6v+JVDY40XSY
+        jisdmCvLZwW2NcDRtiNUrFSsObiB5poqzF4UwlxZPiuwrQGu9V+iYqUCN38mbgGbDvL8n9BxpQNzZfms
+        wLYG6BuNU7HSURPI3nKaimif+SuCmCvLaQW2NQC+J59dYu7XP8WfFYvRsT6a12pwvwE2f2bvWsIcs3lP
+        gG0NANaeNv+r36Ip2hCeaTlG+9cL5sjyWoWtDXCu6wwVTQ+zvAvE0ylYBVbsX0P71wvmyPJaha0N8PTl
+        HTHH5NU1cCn6Gc1rFf0jMdqvXjA3zJHltgpbGwBUXjd+QSjBop3LxMsMf5CZCvdpN+1XL5gby2slWTUA
+        7kW/OHRRNAzXibZHQTH6sp8OIhO6H0aoeHo50pCdb9oivQHanxEwN5Y7E1AD1AI1QW1QI1Y7LQwZIJn3
+        A2vFtliFuH7vqqXX5Fcf3kAF1AMe0HD7bojmNcuT5z3jqwvrTy+YE8ttBmgNzaE9asBqo5eMDDCR8YcV
+        6HymUDqu9V6kIuoFP+jovhemuY3y5HmvWL438+cTYE4sv1GgcbqHchjBMgMAPKzg8lDmV7nwYIUFu8z/
+        PgDABJn+SKRvJGpJ8TGXTB8WAaBtuodyGMVSAyTY2XmATsAIwbuZ33sHthzbJgYfGntcC2742HWlOqOf
+        qE0Ec2H9GAGaMq0zJSsGAMEHmU96b8MeKqhRvGeMff9eGz5F85gBc2B9GAFaMo2tIGsGWNy0We5QM7sw
+        gxswV31qfkOYYLoMgLFn+gBJaAgtmcZWoNsAZt4XUNGeufvvPe8Q7+7I7Fe6Rn8y1nankeYxAsaMsbP8
+        RoCGTNuJ5PT7ArpGMz/3bRy4RkXWw/qafPHilfENGL7rz+RZQxgzy2sEaMc0TWCL9wXUdB+j7YyyL7if
+        Cq3FupqN4xdvWC694CzAdcpt2AgYK8tnFGjHNAW2eV8AlifWxgxn206LmZ7UO/P8w5tErC/zDehE8FSR
+        whNFtL+JYGwYI8thhlSHWdu8LwCPMbHyKmFsuEnMq5i8J9h0ZPP4sZu1sYquu0Gx9fi2SX0DjAljY+3M
+        AM20HgFju/cFPLHgqWETufesXSzdt2pc+MU7l40/EYx9LlvgwVNLd6/4tvgYC8bEPmsWaMa0BLZ7X8C9
+        Mevv28PzcQ7U75uSewAYz1/0jx8Wis56LH9OEoBmTEtgq/cFgK2xcuGK+yzH3eoTB6IHpux2sIk8ft4t
+        dof3ie3xKjq2TIFmTEtgq/cFTAV59RtFbedZy9/awXgh/9pPtB0XCwPWXpM3im3eFzCVLK7fJGoiNeJu
+        Fh4VM/ioTdSED4lFgdx4T6Jt3hcwHeDcd2tLmbjUdV7ceRg3dRaCNncetopLt2tFQXMx7We6yfn3BeQK
+        eXX5wnOzQhy/dXzcFI29V0V0sEH0jEREtyQ22Cjqe6+Ii11nxZG2I6KwoUx8XJf+KlougBrk5PsCFPZA
+        GcDhKAM4HGUAh6MM4HCUARwODNCocC4zhBAKB0ODCudAgwrnQIMK50CDCudAgwrnQIMK50CDCudAgwrn
+        QIMK50CDCudAgwrnQIMK50CDCudAgwrnQIMK50CDCudAgwqnIGb8D7lX32JDYmSOAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
